--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "19.2.4",
-    "@angular/cdk": "19.0.1",
+    "@angular/cdk": "19.2.7",
     "@angular/common": "19.2.4",
     "@angular/compiler": "19.2.4",
     "@angular/core": "19.2.4",
@@ -28,7 +28,7 @@
     "@ngbracket/ngx-layout": "18.0.0",
     "@ngx-translate/core": "16.0.3",
     "@ngx-translate/http-loader": "16.0.0",
-    "@swimlane/ngx-charts": "21.0.0",
+    "@swimlane/ngx-charts": "22.0.0-alpha.1",
     "angular-in-memory-web-api": "0.19.0",
     "encrypt-storage": "^2.14.6",
     "express": "5.1.0",
