--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "@angular/platform-server": "19.2.4",
     "@angular/router": "19.2.4",
     "@angular/ssr": "19.2.5",
-    "@ngbracket/ngx-layout": "18.0.0",
+    "@ngbracket/ngx-layout": "^19.0.0",
     "@ngx-translate/core": "16.0.3",
     "@ngx-translate/http-loader": "16.0.0",
     "@swimlane/ngx-charts": "22.0.0-alpha.1",
     "angular-in-memory-web-api": "0.19.0",
-    "encrypt-storage": "^2.14.6",
+    "crypto-js": "^4.2.0",
     "express": "5.1.0",
     "ngx-pagination": "6.0.3",
     "ngx-progressbar": "13.0.0",
     "ngx-scrollbar": "16.1.1",
+    "ngx-webstorage": "^19.0.1",
     "ngxtension": "^5.0.0",
     "rxjs": "7.8.1",
     "swiper": "6.6.1",
@@ -44,7 +45,7 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.5",
+    "@angular-devkit/build-angular": "19.2.6",
     "@angular/cli": "19.2.5",
     "@angular/compiler-cli": "19.2.4",
     "@types/d3-scale": "4.0.8",
